# responsible-ai-sensification

./: .gitignore  .main.py.swp  README.md  export.py  extract.py  main.py  pyproject.toml  synthesize.py  transform.py
app/client/: index.html  main.js  style.css
app/server/: main.py  session.py
app/server/pipeline/: audio_utils.py  export.py  extract.py  pitch_policy.py  synthesize.py  tonality.py  tonality_matcher.py  transform.py
app/server/pipeline/tonality_data/: schubart_keys.json
app/server/routers/: config.py  stream.py
gpt_trash/: README_gemma_scope_cli.md  gemma_scope_contrastive_cli.py  gemma_scope_prompt_cli.py  requirements_gemma_scope_cli.txt  setup_gemma_scope_cli.sh
runs/first_plot/: The_law_of_conservation_of_energy_states_layer22_65k.json
scripts/: start.sh  stop.sh
specs/: TODO.md  bug-bpm-timing-and-cluster-cache-reload.md  bug-cluster-map-silent-hang.md  bug-max-tokens-zero-no-generation.md  bug-verbose-logging-hang-diagnosis.md  live-sae-inspection.md  persist-ui-params.md  streaming-live-audio-pipeline.md  token-generation-sae-inspection.md  ui-controls-overhaul.md  unix-pipeline-cli-tools.md  web-audio-api.md  web-server-frontend.md
tests/: test_tonality_matcher.py
