[project]
name = "responsible-ai-sensification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "einops>=0.8.2",
    "huggingface-hub>=1.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "typing>=3.10.0.0",
]
